--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </label>
             <div class="nav-links">
                 <a href="#home">Home</a>
-                <a href="/pro.html">Products</a>
+                <a href="pro.html">Products</a>
                 <a href="#cart">Cart (0)</a>
                 <a href="#orders">Orders</a>
             </div>
@@ -284,7 +284,7 @@
         <div class="products-grid">
             <!-- Product 1 -->
             <div class="product-card">
-                <img src="/images (5).jpg" alt="Product 1" class="product-image">
+                <img src="images (5).jpg" alt="Product 1" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Classic White T-Shirt</h3>
                     <p class="product-price">Rs.2999</p>
@@ -294,7 +294,7 @@
 
             <!-- Product 2 -->
             <div class="product-card">
-                <img src="/images.jpg" alt="Product 2" class="product-image">
+                <img src="images.jpg" alt="Product 2" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Slim Fit Jeans</h3>
                     <p class="product-price">Rs5999</p>
@@ -304,7 +304,7 @@
 
             <!-- Product 3 -->
             <div class="product-card">
-                <img src="/images (1).jpg" alt="Product 3" class="product-image">
+                <img src="images (1).jpg" alt="Product 3" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Casual Blazer</h3>
                     <p class="product-price">Rs8999</p>
@@ -314,7 +314,7 @@
 
             <!-- Product 4 -->
             <div class="product-card">
-                <img src="/product-image-1198564609.jpg" alt="Product 4" class="product-image">
+                <img src="product-image-1198564609.jpg" alt="Product 4" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Leather Jacket</h3>
                     <p class="product-price">Rs1299</p>
