--- a/pro.html
+++ b/pro.html
@@ -205,7 +205,7 @@
         <div class="nav-container">
             <a href="#" class="logo">MEN'S FASHION</a>
             <div class="nav-links">
-                <a href="/index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#products">Products</a>
                 <a href="#cart">Cart (0)</a>
                 <a href="#orders">Orders</a>
@@ -232,7 +232,7 @@
         <h2 class="category-title">Denim Collection</h2>
         <div class="products-grid">
             <div class="product-card">
-                <img src="/images (2).jpg" alt="Slim Fit Jeans" class="product-image">
+                <img src="images (2).jpg" alt="Slim Fit Jeans" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Slim Fit Jeans</h3>
                     <p class="product-price">$79.99</p>
@@ -246,7 +246,7 @@
             </div>
 
             <div class="product-card">
-                <img src="/denim jack.jpg" alt="Denim Jacket" class="product-image">
+                <img src="denim jack.jpg" alt="Denim Jacket" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Classic Denim Jacket</h3>
                     <p class="product-price">$89.99</p>
@@ -265,7 +265,7 @@
         <h2 class="category-title">Shirts Collection</h2>
         <div class="products-grid">
             <div class="product-card">
-                <img src="/ox.jpg" alt="Oxford Shirt" class="product-image">
+                <img src="ox.jpg" alt="Oxford Shirt" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Oxford Button-Down</h3>
                     <p class="product-price">$49.99</p>
@@ -279,7 +279,7 @@
             </div>
 
             <div class="product-card">
-                <img src="/linim shrt.jpg" alt="Casual Shirt" class="product-image">
+                <img src="linim shrt.jpg" alt="Casual Shirt" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Casual Linen Shirt</h3>
                     <p class="product-price">$45.99</p>
@@ -298,7 +298,7 @@
         <h2 class="category-title">Pants Collection</h2>
         <div class="products-grid">
             <div class="product-card">
-                <img src="/chinos.jpg" alt="Chinos" class="product-image">
+                <img src="chinos.jpg" alt="Chinos" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Classic Chinos</h3>
                     <p class="product-price">$59.99</p>
@@ -311,7 +311,7 @@
             </div>
 
             <div class="product-card">
-                <img src="/formal.jpg" alt="Dress Pants" class="product-image">
+                <img src="formal.jpg" alt="Dress Pants" class="product-image">
                 <div class="product-info">
                     <h3 class="product-title">Formal Dress Pants</h3>
                     <p class="product-price">$69.99</p>
